--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 </div>
 
 <ul class="nav pull-right scroll-top">
-  <li><a href="#" title="Scroll to top"><i class="glyphicon glyphicon-arrow-up"></i></a></li>
+  <li><a href="#" title="Scroll to top"><i class="glyphicon glyphicon-chevron-up"></i></a></li>
 </ul>
 
 
